@startuml messaging
title Messaging
hide empty members

skinparam linetype ortho

package messaging {
    interface IMessageDispatcher
    interface IMessageProcessor
    class Gateway
    class MultiAdapter
    interface IAdapter
}

class Spoke
class SpokeHandler
class Hub
class HubHandler


Spoke --> IMessageDispatcher
Hub --> IMessageDispatcher
IMessageDispatcher -up-> SpokeHandler
IMessageDispatcher -up-> HubHandler
IMessageProcessor -up-> HubHandler
IMessageProcessor -up-> SpokeHandler

IMessageDispatcher --> Gateway

Gateway -up-> IMessageProcessor
Gateway <-down-> MultiAdapter
MultiAdapter <-down-> "n" IAdapter


@enduml
